<resources>
    <string name="app_name">Qatar22</string>
    <string name="consultaResBtn">CONSULTAR RESULTADOS</string>
    <string name="registrarResBtn">REGISTRAR RESULTADO</string>
    <string name="golesEquipo1">Goles del equipo 1</string>
    <string name="guion">-</string>
    <string name="golesEquipo2">Goles del equipo 2</string>
    <string name="guardarResultado">GUARDAR RESULTADO</string>
    <string name="limpiarDatos">LIMPIAR DATOS</string>
    <string name="seleccionar">SELECCIONAR</string>
    <string name="seleccionaEquipo2">Selecciona el equipo 2</string>
    <string name="seleccionaEquipo1">Selecciona el equipo 1</string>
    <string name="faseGruposHint">Introduce la fase: Fase grupos ,Octavos ,Cuartos ,Tercer puesto, Final</string>
    <string name="fechaAño">Introduce la fecha dd/mm/yyyy hh:mi</string>
    <string name="introducirResultado">Introducir Resultado</string>
    <string name="consResPorPais">Consulta resultados por pais</string>
    <string name="introPais">Introduce el pais</string>
    <string name="btnCancelarSelec">CANCELAR</string>
    <string name="btnAceptarSelec">ACEPTAR</string>
    <string name="etSelecInSelec">Introduce el pais seleccionado</string>
    <string name="tvSelecEquipo">Selección de equipo</string>
    <string name="Alemania">Alemania</string>
    <string name="ArabiaSaudi">Arabia Saudí</string>
    <string name="Argentina">Argentina</string>
    <string name="Australia">Australia</string>
    <string name="Bélgica">Bélgica</string>
    <string name="Brasil">Brasil</string>
    <string name="Camerún">Camerún</string>
    <string name="Canadá">Canadá</string>
    <string name="CoreaDelSur">Corea del Sur</string>
    <string name="CostaRica">Costa Rica</string>
    <string name="Croacia">Croacia</string>
    <string name="Dinamarca">Dinamarca</string>
    <string name="Ecuador">Ecuador</string>
    <string name="España">España</string>
    <string name="EstadosUnidos">Estados Unidos</string>
    <string name="Francia">Francia</string>
    <string name="Gales">Gales</string>
    <string name="Ghana">Ghana</string>
    <string name="Holanda">Holanda</string>
    <string name="Inglaterra">Inglaterra</string>
    <string name="Irán">Irán</string>
    <string name="Japón">Japón</string>
    <string name="Marruecos">Marruecos</string>
    <string name="México">México</string>
    <string name="Polonia">Polonia</string>
    <string name="Portugal">Portugal</string>
    <string name="Qatar">Qatar</string>
    <string name="Senegal">Senegal</string>
    <string name="Serbia">Serbia</string>
    <string name="Suiza">Suiza</string>
    <string name="Túnez">Túnez</string>
    <string name="Uruguay">Uruguay</string>
    <string name="limpiarConsulta">LIMPIAR DATOS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>