<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeleccionActivity">


    <TextView
        android:id="@+id/tvSeleccionPais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textoBase"
        android:text="@string/tvSelecEquipo"
        android:layout_marginTop="@dimen/margenMini"
        android:layout_marginLeft="@dimen/margenMini"
        />





    <EditText
        android:id="@+id/etSeleccPaisSelec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/etSelecInSelec"
        android:layout_above="@+id/linearLay"
        android:layout_marginBottom="@dimen/margenMedio"
        android:layout_marginLeft="@dimen/margenMini"
        android:layout_marginRight="@dimen/margenMini"
        />


    <LinearLayout
        android:id="@+id/linearLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margenMini"

        >

        <Button
            android:id="@+id/btnAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textoBase"
            android:text="@string/btnAceptarSelec"
            android:layout_marginRight="@dimen/margenMedio"
            android:layout_marginLeft="@dimen/margenMedio"
            android:backgroundTint="@color/qatarColor"

        />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textoBase"
            android:text="@string/btnCancelarSelec"
            android:layout_marginLeft="@dimen/margenMedio"
            android:backgroundTint="@color/qatarColor"
            />



    </LinearLayout>
</RelativeLayout>